<resources>
    <string name="app_name">Lyrech</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_sign_in">Sign In</string>
    <string name="login_text_divider">OR</string>
    <string name="login_msg_two"> Do not have an account? </string>
    <string name="login_text_register">Sign up.</string>
    <string name="login_error_one">Error al Iniciar Sesion</string>

    <string name="front_button_sign_in">Sign In</string>
    <string name="front_button_sign_up">Sign Up</string>

    <string name="profile_title">With which profile do you want to operate?</string>
    <string name="profile_profile_one">Investor</string>
    <string name="profile_profile_two">Starup</string>

</resources>
