<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relativelayout_login_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@android:color/white">


    <RelativeLayout
        android:id="@+id/relativelayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/login_margin_title"
            android:src="@drawable/logo"/>

        <EditText
            android:id="@+id/edittext_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_logo"
            android:layout_marginBottom="@dimen/login_margin_edittext"
            android:background="@drawable/shape_rectangle"
            android:hint="@string/login_email_hint"
            android:textAppearance="@style/LoginTextAppearanceEditText" />

        <EditText
            android:id="@+id/edittext_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_login_email"
            android:layout_marginBottom="@dimen/login_margin_edittext"
            android:background="@drawable/shape_rectangle"
            android:hint="@string/login_password_hint"
            android:textAppearance="@style/LoginTextAppearanceEditText" />


        <Button
            android:id="@+id/button_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_login_password"
            android:background="@drawable/shape_rectangle_button"
            android:enabled="false"
            android:text="@string/login_button_sign_in"
            android:textColor="@color/shape_rectangle_button_text" />

    </RelativeLayout>


    <include
        layout="@layout/partial_progress"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"></include>

</RelativeLayout>