<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearlayout_profile_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/material_design_margin"
    android:background="@color/primaryColor"
    tools:context=".profile.ProfileActivity">


    <TextView
        android:id="@+id/text_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_design_margin"
        android:layout_marginBottom="@dimen/material_design_margin"
        android:gravity="center"
        android:text="@string/profile_title"
        android:textColor="@color/primaryTextColor"/>

    <LinearLayout
        android:id="@+id/linearlayout_profile_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100">


        <LinearLayout
            android:id="@+id/linearlayout_profile_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/material_design_margin"
            android:layout_weight="40"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_profile_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/profileone"
                android:backgroundTint="@color/primaryDarkColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile_profile_one"
                android:textColor="@color/primaryTextColor"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearlayout_profile_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/profiletwo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile_profile_two"
                android:textColor="@color/primaryTextColor"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
